[gd_scene load_steps=15 format=2]

[ext_resource path="res://common/avalanche/Avalanche.png" type="Texture" id=1]
[ext_resource path="res://common/avalanche/Avalanche.gd" type="Script" id=2]
[ext_resource path="res://common/avalanche/Avalanche_0.png" type="Texture" id=3]
[ext_resource path="res://common/avalanche/Avalanche_2.png" type="Texture" id=4]
[ext_resource path="res://common/avalanche/Avalanche_1.png" type="Texture" id=5]
[ext_resource path="res://common/avalanche/destroy.wav" type="AudioStream" id=6]
[ext_resource path="res://common/avalanche/Avalanche_4.png" type="Texture" id=7]
[ext_resource path="res://common/avalanche/Avalanche_3.png" type="Texture" id=8]
[ext_resource path="res://common/avalanche/Avalanche_5.png" type="Texture" id=9]
[ext_resource path="res://common/avalanche/Avalanche_6.png" type="Texture" id=10]
[ext_resource path="res://common/avalanche/Avalanche_7.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 100 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "avalanche",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 80.0

[node name="Avalanche" type="Area2D" groups=[
"statefull",
]]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="."]
position = Vector2( 0, 400 )
shape = SubResource( 1 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="SnowBall" type="Area2D" parent="."]

[node name="Animation" type="AnimatedSprite" parent="SnowBall"]
position = Vector2( -0.476807, 398.952 )
frames = SubResource( 2 )
animation = "avalanche"

[node name="Collision" type="CollisionShape2D" parent="SnowBall"]
position = Vector2( -2.55774, -89.1691 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="SnowBall"]

[connection signal="body_entered" from="." to="." method="_on_player_entered"]
[connection signal="body_entered" from="SnowBall" to="." method="_on_player_buried"]
[connection signal="animation_finished" from="SnowBall/Animation" to="." method="_on_animation_finished"]
